--- a/src/components/StylingModules/TopBannerCarousel.module.css
+++ b/src/components/StylingModules/TopBannerCarousel.module.css
@@ -1,22 +1,11 @@
-.swiperButtonNext, .swiperButtonPrev {
-    color: #000000;
-    background-size: contain;
-    background-repeat: no-repeat;
+:global(.swiper-button-next), :global(.swiper-button-prev) {
+    filter: invert(100%) brightness(0);
 }
 
-.swiperButtonNext {
-    right: 10px;
-    background-position: center;
+:global(.swiper-button-next) {
+    top: 200px;
 }
 
-.swiperButtonPrev {
-    left: 10px;
-    background-position: center;
-}
-
-.swiperPagination {
-    bottom: 40px;
-    right: 50px;
-    text-align: center;
-    width: 100%;
+:global(.swiper-button-prev) {
+    top: 200px;
 }
